QCompute/OpenConvertor/QasmToCircuit/BNF_Antlr4/gen/QASMParser.py
# Generated from C:/Project/Quantum/QCompute/QCompute/OpenConvertor/QasmToCircuit/BNF_Antlr4\QASM.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class QASMParser ( Parser ):

    grammarFileName = "QASM.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'}'", "'opaque'", "';'", "'('", "')'", 
                     "'OPENQASM'", "'include'", "'\"'", "'qreg'", "'['", 
                     "']'", "'creg'", "'gate'", "'{'", "'measure'", "'->'", 
                     "'barrier'", "','", "'pi'", "'+'", "'-'", "'*'", "'/'", 
                     "'^'", "'sin'", "'cos'", "'tan'", "'exp'", "'ln'", 
                     "'sqrt'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "REAL", 
                      "INT", "WS", "COMMENT", "LINE_COMMENT", "FILE_NAME" ]

    RULE_mainprog = 0
    RULE_statement = 1
    RULE_version = 2
    RULE_include = 3
    RULE_decl = 4
    RULE_gatedecl = 5
    RULE_goplist = 6
    RULE_qop = 7
    RULE_uop = 8
    RULE_comments = 9
    RULE_lineComment = 10
    RULE_multipleComments = 11
    RULE_measureOp = 12
    RULE_barrierOp = 13
    RULE_anylist = 14
    RULE_idlist = 15
    RULE_mixedlist = 16
    RULE_argument = 17
    RULE_explist = 18
    RULE_exp = 19
    RULE_unaryop = 20
    RULE_sin = 21
    RULE_cos = 22
    RULE_tan = 23
    RULE_expx = 24
    RULE_ln = 25
    RULE_sqrt = 26

    ruleNames =  [ "mainprog", "statement", "version", "include", "decl", 
                   "gatedecl", "goplist", "qop", "uop", "comments", "lineComment", 
                   "multipleComments", "measureOp", "barrierOp", "anylist", 
                   "idlist", "mixedlist", "argument", "explist", "exp", 
                   "unaryop", "sin", "cos", "tan", "expx", "ln", "sqrt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    ID=31
    REAL=32
    INT=33
    WS=34
    COMMENT=35
    LINE_COMMENT=36
    FILE_NAME=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainprogContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(QASMParser.VersionContext,0)


        def include(self):
            return self.getTypedRuleContext(QASMParser.IncludeContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QASMParser.StatementContext)
            else:
                return self.getTypedRuleContext(QASMParser.StatementContext,i)


        def getRuleIndex(self):
            return QASMParser.RULE_mainprog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainprog" ):
                listener.enterMainprog(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainprog" ):
                listener.exitMainprog(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainprog" ):
                return visitor.visitMainprog(self)
            else:
                return visitor.visitChildren(self)




    def mainprog(self):

        localctx = QASMParser.MainprogContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mainprog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.version()
            self.state = 55
            self.include()
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QASMParser.T__1) | (1 << QASMParser.T__8) | (1 << QASMParser.T__11) | (1 << QASMParser.T__12) | (1 << QASMParser.T__14) | (1 << QASMParser.T__16) | (1 << QASMParser.ID) | (1 << QASMParser.COMMENT) | (1 << QASMParser.LINE_COMMENT))) != 0):
                self.state = 56
                self.statement()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(QASMParser.DeclContext,0)


        def gatedecl(self):
            return self.getTypedRuleContext(QASMParser.GatedeclContext,0)


        def goplist(self):
            return self.getTypedRuleContext(QASMParser.GoplistContext,0)


        def ID(self):
            return self.getToken(QASMParser.ID, 0)

        def idlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QASMParser.IdlistContext)
            else:
                return self.getTypedRuleContext(QASMParser.IdlistContext,i)


        def qop(self):
            return self.getTypedRuleContext(QASMParser.QopContext,0)


        def comments(self):
            return self.getTypedRuleContext(QASMParser.CommentsContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = QASMParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.gatedecl()
                self.state = 64
                self.goplist()
                self.state = 65
                self.match(QASMParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.gatedecl()
                self.state = 68
                self.match(QASMParser.T__0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.match(QASMParser.T__1)
                self.state = 71
                self.match(QASMParser.ID)
                self.state = 72
                self.idlist()
                self.state = 73
                self.match(QASMParser.T__2)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 75
                self.match(QASMParser.T__1)
                self.state = 76
                self.match(QASMParser.ID)
                self.state = 77
                self.match(QASMParser.T__3)
                self.state = 78
                self.match(QASMParser.T__4)
                self.state = 79
                self.idlist()
                self.state = 80
                self.match(QASMParser.T__2)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 82
                self.match(QASMParser.T__1)
                self.state = 83
                self.match(QASMParser.ID)
                self.state = 84
                self.match(QASMParser.T__3)
                self.state = 85
                self.idlist()
                self.state = 86
                self.match(QASMParser.T__4)
                self.state = 87
                self.idlist()
                self.state = 88
                self.match(QASMParser.T__2)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 90
                self.qop()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 91
                self.comments()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REAL(self):
            return self.getToken(QASMParser.REAL, 0)

        def getRuleIndex(self):
            return QASMParser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersion" ):
                return visitor.visitVersion(self)
            else:
                return visitor.visitChildren(self)




    def version(self):

        localctx = QASMParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(QASMParser.T__5)
            self.state = 95
            self.match(QASMParser.REAL)
            self.state = 96
            self.match(QASMParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FILE_NAME(self):
            return self.getToken(QASMParser.FILE_NAME, 0)

        def getRuleIndex(self):
            return QASMParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = QASMParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(QASMParser.T__6)
            self.state = 99
            self.match(QASMParser.T__7)
            self.state = 100
            self.match(QASMParser.FILE_NAME)
            self.state = 101
            self.match(QASMParser.T__7)
            self.state = 102
            self.match(QASMParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return QASMParser.RULE_decl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class QRegContext(DeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QASMParser.DeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(QASMParser.ID, 0)
        def INT(self):
            return self.getToken(QASMParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQReg" ):
                listener.enterQReg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQReg" ):
                listener.exitQReg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQReg" ):
                return visitor.visitQReg(self)
            else:
                return visitor.visitChildren(self)


    class CRegContext(DeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a QASMParser.DeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(QASMParser.ID, 0)
        def INT(self):
            return self.getToken(QASMParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCReg" ):
                listener.enterCReg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCReg" ):
                listener.exitCReg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCReg" ):
                return visitor.visitCReg(self)
            else:
                return visitor.visitChildren(self)



    def decl(self):

        localctx = QASMParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_decl)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QASMParser.T__8]:
                localctx = QASMParser.QRegContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(QASMParser.T__8)
                self.state = 105
                self.match(QASMParser.ID)
                self.state = 106
                self.match(QASMParser.T__9)
                self.state = 107
                self.match(QASMParser.INT)
                self.state = 108
                self.match(QASMParser.T__10)
                self.state = 109
                self.match(QASMParser.T__2)
                pass
            elif token in [QASMParser.T__11]:
                localctx = QASMParser.CRegContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(QASMParser.T__11)
                self.state = 111
                self.match(QASMParser.ID)
                self.state = 112
                self.match(QASMParser.T__9)
                self.state = 113
                self.match(QASMParser.INT)
                self.state = 114
                self.match(QASMParser.T__10)
                self.state = 115
                self.match(QASMParser.T__2)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GatedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(QASMParser.ID, 0)

        def idlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QASMParser.IdlistContext)
            else:
                return self.getTypedRuleContext(QASMParser.IdlistContext,i)


        def getRuleIndex(self):
            return QASMParser.RULE_gatedecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGatedecl" ):
                listener.enterGatedecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGatedecl" ):
                listener.exitGatedecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGatedecl" ):
                return visitor.visitGatedecl(self)
            else:
                return visitor.visitChildren(self)




    def gatedecl(self):

        localctx = QASMParser.GatedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_gatedecl)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(QASMParser.T__12)
                self.state = 119
                self.match(QASMParser.ID)
                self.state = 120
                self.idlist()
                self.state = 121
                self.match(QASMParser.T__13)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(QASMParser.T__12)
                self.state = 124
                self.match(QASMParser.ID)
                self.state = 125
                self.match(QASMParser.T__3)
                self.state = 126
                self.match(QASMParser.T__4)
                self.state = 127
                self.idlist()
                self.state = 128
                self.match(QASMParser.T__13)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.match(QASMParser.T__12)
                self.state = 131
                self.match(QASMParser.ID)
                self.state = 132
                self.match(QASMParser.T__3)
                self.state = 133
                self.idlist()
                self.state = 134
                self.match(QASMParser.T__4)
                self.state = 135
                self.idlist()
                self.state = 136
                self.match(QASMParser.T__13)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GoplistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def uop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QASMParser.UopContext)
            else:
                return self.getTypedRuleContext(QASMParser.UopContext,i)


        def barrierOp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QASMParser.BarrierOpContext)
            else:
                return self.getTypedRuleContext(QASMParser.BarrierOpContext,i)


        def comments(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QASMParser.CommentsContext)
            else:
                return self.getTypedRuleContext(QASMParser.CommentsContext,i)


        def getRuleIndex(self):
            return QASMParser.RULE_goplist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoplist" ):
                listener.enterGoplist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoplist" ):
                listener.exitGoplist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoplist" ):
                return visitor.visitGoplist(self)
            else:
                return visitor.visitChildren(self)




    def goplist(self):

        localctx = QASMParser.GoplistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_goplist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 143
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [QASMParser.ID]:
                    self.state = 140
                    self.uop()
                    pass
                elif token in [QASMParser.T__16]:
                    self.state = 141
                    self.barrierOp()
                    pass
                elif token in [QASMParser.COMMENT, QASMParser.LINE_COMMENT]:
                    self.state = 142
                    self.comments()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QASMParser.T__16) | (1 << QASMParser.ID) | (1 << QASMParser.COMMENT) | (1 << QASMParser.LINE_COMMENT))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def uop(self):
            return self.getTypedRuleContext(QASMParser.UopContext,0)


        def measureOp(self):
            return self.getTypedRuleContext(QASMParser.MeasureOpContext,0)


        def barrierOp(self):
            return self.getTypedRuleContext(QASMParser.BarrierOpContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_qop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQop" ):
                listener.enterQop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQop" ):
                listener.exitQop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQop" ):
                return visitor.visitQop(self)
            else:
                return visitor.visitChildren(self)




    def qop(self):

        localctx = QASMParser.QopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_qop)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QASMParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.uop()
                pass
            elif token in [QASMParser.T__14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.measureOp()
                pass
            elif token in [QASMParser.T__16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.barrierOp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(QASMParser.ID, 0)

        def anylist(self):
            return self.getTypedRuleContext(QASMParser.AnylistContext,0)


        def explist(self):
            return self.getTypedRuleContext(QASMParser.ExplistContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_uop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUop" ):
                listener.enterUop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUop" ):
                listener.exitUop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUop" ):
                return visitor.visitUop(self)
            else:
                return visitor.visitChildren(self)




    def uop(self):

        localctx = QASMParser.UopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_uop)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(QASMParser.ID)
                self.state = 153
                self.anylist()
                self.state = 154
                self.match(QASMParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(QASMParser.ID)
                self.state = 157
                self.match(QASMParser.T__3)
                self.state = 158
                self.match(QASMParser.T__4)
                self.state = 159
                self.anylist()
                self.state = 160
                self.match(QASMParser.T__2)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 162
                self.match(QASMParser.ID)
                self.state = 163
                self.match(QASMParser.T__3)
                self.state = 164
                self.explist()
                self.state = 165
                self.match(QASMParser.T__4)
                self.state = 166
                self.anylist()
                self.state = 167
                self.match(QASMParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lineComment(self):
            return self.getTypedRuleContext(QASMParser.LineCommentContext,0)


        def multipleComments(self):
            return self.getTypedRuleContext(QASMParser.MultipleCommentsContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_comments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComments" ):
                listener.enterComments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComments" ):
                listener.exitComments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComments" ):
                return visitor.visitComments(self)
            else:
                return visitor.visitChildren(self)




    def comments(self):

        localctx = QASMParser.CommentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comments)
        try:
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QASMParser.LINE_COMMENT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.lineComment()
                pass
            elif token in [QASMParser.COMMENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.multipleComments()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineCommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LINE_COMMENT(self):
            return self.getToken(QASMParser.LINE_COMMENT, 0)

        def getRuleIndex(self):
            return QASMParser.RULE_lineComment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineComment" ):
                listener.enterLineComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineComment" ):
                listener.exitLineComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLineComment" ):
                return visitor.visitLineComment(self)
            else:
                return visitor.visitChildren(self)




    def lineComment(self):

        localctx = QASMParser.LineCommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_lineComment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(QASMParser.LINE_COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultipleCommentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(QASMParser.COMMENT, 0)

        def getRuleIndex(self):
            return QASMParser.RULE_multipleComments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultipleComments" ):
                listener.enterMultipleComments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultipleComments" ):
                listener.exitMultipleComments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultipleComments" ):
                return visitor.visitMultipleComments(self)
            else:
                return visitor.visitChildren(self)




    def multipleComments(self):

        localctx = QASMParser.MultipleCommentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_multipleComments)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(QASMParser.COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MeasureOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QASMParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(QASMParser.ArgumentContext,i)


        def getRuleIndex(self):
            return QASMParser.RULE_measureOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeasureOp" ):
                listener.enterMeasureOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeasureOp" ):
                listener.exitMeasureOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeasureOp" ):
                return visitor.visitMeasureOp(self)
            else:
                return visitor.visitChildren(self)




    def measureOp(self):

        localctx = QASMParser.MeasureOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_measureOp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(QASMParser.T__14)
            self.state = 180
            self.argument()
            self.state = 181
            self.match(QASMParser.T__15)
            self.state = 182
            self.argument()
            self.state = 183
            self.match(QASMParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BarrierOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
